image added into home page

--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
     <body>
         <h1>this is home page</h1>
         <p>this is content</p>
+        <img=src"<image/image/photo-1617635277889-df22350f81a0.avif""width=200px"/>
     </body>
 </html>
